--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,13 @@ jobs:
             # JAR 파일 교체
             mv /home/ubuntu/app-new.jar /home/ubuntu/app-latest.jar
             
+            # JAR 파일 존재 확인
+            if [ ! -f "/home/ubuntu/app-latest.jar" ]; then
+              echo "❌ JAR 파일이 없습니다: /home/ubuntu/app-latest.jar"
+              exit 1
+            fi
+            echo "✅ JAR 파일 준비 완료: /home/ubuntu/app-latest.jar"
+            
             # 현재 활성 포트 확인 (weight=100인 포트)
             CURRENT_PORT=$(sudo grep -oP 'server 127.0.0.1:\K[0-9]+.*weight=100' /etc/nginx/sites-available/erp.conf | head -n 1)
             
