--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -155,12 +155,23 @@ jobs:
             
             # 진짜 무중단 전환: Nginx weight만 변경 (프로세스 종료 없음)
             echo "▶ 진짜 무중단 전환: Nginx weight만 변경"
-            sudo sed -i "s/server 127.0.0.1:$CURRENT_PORT.*weight=100/server 127.0.0.1:$CURRENT_PORT weight=0/" /etc/nginx/sites-available/erp.conf
-            sudo sed -i "s/server 127.0.0.1:$NEW_PORT.*weight=0/server 127.0.0.1:$NEW_PORT weight=100/" /etc/nginx/sites-available/erp.conf
             
-            # Nginx reload (설정 변경만)
-            sudo nginx -t && sudo nginx -s reload
-            echo "✅ Nginx upstream 전환 완료 (Bad Gateway 0초!)"
+            # 새 앱이 완전히 준비된 후에만 weight 변경
+            echo "▶ 새 앱 헬스체크 최종 확인..."
+            if curl -s --max-time 5 "http://localhost:${NEW_PORT}/actuator/health" | grep -q '"status":"UP"'; then
+              echo "✅ 새 앱 헬스체크 최종 확인 완료"
+              
+              # weight 변경
+              sudo sed -i "s/server 127.0.0.1:$CURRENT_PORT.*weight=100/server 127.0.0.1:$CURRENT_PORT weight=0/" /etc/nginx/sites-available/erp.conf
+              sudo sed -i "s/server 127.0.0.1:$NEW_PORT.*weight=0/server 127.0.0.1:$NEW_PORT weight=100/" /etc/nginx/sites-available/erp.conf
+              
+              # Nginx reload (설정 변경만)
+              sudo nginx -t && sudo nginx -s reload
+              echo "✅ Nginx upstream 전환 완료 (Bad Gateway 0초!)"
+            else
+              echo "❌ 새 앱 헬스체크 실패, weight 변경하지 않음"
+              exit 1
+            fi
             
             # 전환 확인
             sleep 2
