--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,12 @@ jobs:
       - name: 📦 JAR 파일 EC2로 전송
         run: rsync -avz --progress build/libs/*.jar ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }}:/home/ubuntu/app-new.jar
 
-      - name: 🚀 EC2 간단 무중단 배포
+      - name: 🚀 EC2 포트 기반 무중단 배포
         run: |
           ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} bash -s << 'EOF'
             set -euo pipefail
             
-            echo "🚀 간단 무중단 배포 시작"
+            echo "🚀 포트 기반 무중단 배포 시작"
             
             # JAR 파일 교체
             mv /home/ubuntu/app-new.jar /home/ubuntu/app-latest.jar
@@ -60,14 +60,10 @@ jobs:
             fi
             echo "✅ JAR 파일 준비 완료: /home/ubuntu/app-latest.jar"
             
-            # 현재 활성 포트 확인 (weight=99인 포트)
-            CURRENT_PORT=$(sudo grep "weight=99" /etc/nginx/sites-available/erp.conf | grep -oP '127.0.0.1:\K[0-9]+' | head -n 1)
+            # 현재 활성 포트 확인 (Nginx upstream에서)
+            CURRENT_PORT=$(sudo grep "server 127.0.0.1:" /etc/nginx/sites-available/erp.conf | grep -oP '127.0.0.1:\K[0-9]+' | head -n 1)
             
-            # 디버깅을 위한 현재 상태 출력
-            echo "▶ 현재 Nginx upstream 상태:"
-            sudo grep "server 127.0.0.1:" /etc/nginx/sites-available/erp.conf
-            
-            # 포트 전환 로직 수정
+            # 새 포트 결정
             if [ "$CURRENT_PORT" = "8080" ]; then
               NEW_PORT="8081"
             elif [ "$CURRENT_PORT" = "8081" ]; then
@@ -82,7 +78,7 @@ jobs:
             NEW_APP="app-${NEW_PORT}"
             OLD_APP="app-${CURRENT_PORT}"
             
-            echo "▶ 포트 전환: $CURRENT_PORT (weight=99) → $NEW_PORT (weight=99)"
+            echo "▶ 포트 전환: $CURRENT_PORT → $NEW_PORT"
             echo "▶ 새 앱: $NEW_APP, 이전 앱: $OLD_APP"
             
             # 새 앱 시작/재시작
@@ -97,7 +93,7 @@ jobs:
             # 새 앱 준비 대기
             echo "▶ 새 앱 준비 대기 (포트: $NEW_PORT)"
             
-            # 1단계: 포트 열림 확인 (빠른 확인)
+            # 1단계: 포트 열림 확인
             echo "▶ 1단계: 포트 열림 확인..."
             for i in {1..15}; do
               echo "▶ 포트 확인 시도 $i/15..."
@@ -125,11 +121,10 @@ jobs:
                 exit 1
               fi
               
-              echo "▶ 3초 대기 후 재시도..."
-              sleep 3
+              sleep 2
             done
             
-            # 2단계: Spring Boot 완전 시작 대기 (더 긴 대기)
+            # 2단계: Spring Boot 완전 시작 대기
             echo "▶ 2단계: Spring Boot 완전 시작 대기..."
             for i in {1..20}; do
               echo "▶ 헬스체크 시도 $i/20..."
@@ -145,54 +140,44 @@ jobs:
                 pm2 list
                 echo "▶ PM2 로그 (마지막 20줄):"
                 pm2 logs "$NEW_APP" --lines 20
-                echo "▶ 포트 상태:"
-                ss -tlnp | grep ":$NEW_PORT " || echo "포트 $NEW_PORT에서 프로세스 없음"
                 exit 1
               fi
               
               sleep 3
             done
             
-            # 진짜 무중단 전환: Nginx weight만 변경 (프로세스 종료 없음)
-            echo "▶ 진짜 무중단 전환: Nginx weight만 변경"
+            # 포트 기반 전환: Nginx upstream을 새 포트로 변경
+            echo "▶ 포트 기반 전환: Nginx upstream을 $NEW_PORT로 변경"
             
-            # 새 앱이 완전히 준비된 후에만 weight 변경
-            echo "▶ 새 앱 헬스체크 최종 확인..."
-            if curl -s --max-time 5 "http://localhost:${NEW_PORT}/actuator/health" | grep -q '"status":"UP"'; then
-              echo "✅ 새 앱 헬스체크 최종 확인 완료"
-              
-              # weight 변경
-              sudo sed -i "s/server 127.0.0.1:$CURRENT_PORT.*weight=99/server 127.0.0.1:$CURRENT_PORT weight=1/" /etc/nginx/sites-available/erp.conf
-              sudo sed -i "s/server 127.0.0.1:$NEW_PORT.*weight=1/server 127.0.0.1:$NEW_PORT weight=99/" /etc/nginx/sites-available/erp.conf
-              
-              # Nginx reload (설정 변경만)
-              sudo nginx -t && sudo nginx -s reload
-              echo "✅ Nginx upstream 전환 완료 (Bad Gateway 0초!)"
-            else
-              echo "❌ 새 앱 헬스체크 실패, weight 변경하지 않음"
-              exit 1
-            fi
+            # Nginx 설정 백업
+            sudo cp /etc/nginx/sites-available/erp.conf /etc/nginx/sites-available/erp.conf.backup
+            
+            # 기존 Nginx 설정에서 포트만 변경
+            sudo sed -i "s/server 127.0.0.1:[0-9]\+/server 127.0.0.1:$NEW_PORT/g" /etc/nginx/sites-available/erp.conf
+            
+            # Nginx 설정 테스트 및 reload
+            sudo nginx -t && sudo nginx -s reload
+            echo "✅ Nginx upstream 전환 완료 (포트: $NEW_PORT)"
             
             # 전환 확인
             sleep 2
             if curl -s --max-time 5 "http://localhost/actuator/health" | grep -q '"status":"UP"'; then
               echo "✅ 새 앱으로 전환 완료"
               
-              # 이전 앱도 새 JAR로 업데이트 (프로세스는 유지)
-              echo "▶ 이전 앱 $OLD_APP도 새 JAR로 업데이트"
-              pm2 restart "$OLD_APP"
+              # 이전 앱 종료 (포트 기반 전환의 장점!)
+              echo "▶ 이전 앱 $OLD_APP 종료"
+              pm2 delete "$OLD_APP" 2>/dev/null || true
               
               # PM2 상태 저장
               pm2 save --force
               
-              echo "✅ 진짜 무중단 배포 완료! (Bad Gateway 0초)"
+              echo "✅ 포트 기반 무중단 배포 완료! (Bad Gateway 0초)"
             else
               echo "❌ 전환 실패, 롤백"
-              # weight 롤백
-              sudo sed -i "s/server 127.0.0.1:$CURRENT_PORT.*weight=1/server 127.0.0.1:$CURRENT_PORT weight=99/" /etc/nginx/sites-available/erp.conf
-              sudo sed -i "s/server 127.0.0.1:$NEW_PORT.*weight=99/server 127.0.0.1:$NEW_PORT weight=1/" /etc/nginx/sites-available/erp.conf
+              # Nginx 설정 롤백
+              sudo cp /etc/nginx/sites-available/erp.conf.backup /etc/nginx/sites-available/erp.conf
               sudo nginx -s reload
-              echo "✅ 롤백 완료 (이전 앱으로 복구)"
+              echo "✅ 롤백 완료 (이전 설정으로 복구)"
               exit 1
             fi
           EOF
