--- a/settings.gradle
+++ b/settings.gradle
@@ -1,25 +1,31 @@
 // 플러그인 관리 설정 (반드시 맨 처음에 와야 함)
 pluginManagement {
     repositories {
-        gradlePluginPortal()
-        mavenCentral()
-        google()
+        gradlePluginPortal()    // Gradle 공식 플러그인 포털
+        mavenCentral()          // Maven 중앙 저장소
+        google()                // Google Maven 저장소
+    }
+    plugins {
+        id 'org.springframework.boot' version '3.5.0'
+        id 'io.spring.dependency-management' version '1.1.7'
     }
 }
 
+// 프로젝트 이름 설정
 rootProject.name = 'erp-api-server'
 
 // 의존성 해결 전략
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+
     repositories {
-        mavenCentral()
-        maven { url = 'https://repo.spring.io/milestone' }
-        maven { url = 'https://repo.spring.io/snapshot' }
+        mavenCentral()          // Maven 중앙 저장소
+        maven { url = 'https://repo.spring.io/milestone' }  // Spring 마일스톤 버전
+        maven { url = 'https://repo.spring.io/snapshot' }   // Spring 스냅샷 버전
     }
 }
 
-// 빌드 캐시 설정 (빌드 속도 향상)
+// 빌드 캐시 설정
 buildCache {
     local {
         directory = new File(rootDir, 'build-cache')
