--- a/src/main/resources/application-common.yaml
+++ b/src/main/resources/application-common.yaml
@@ -38,6 +38,9 @@ spring:
           order_inserts: true         # 배치 최적화를 위해 삽입문 정렬
           order_updates: true         # 배치 최적화를 위해 수정문 정렬
         default_batch_fetch_size: 200 # 쿼리 최적화를 위한 배치 페치 크기
+
+        # SQL 로깅 및 포맷팅 설정
+        format_sql: true              # SQL을 보기 좋게 포맷팅
     open-in-view: false        # 지연 로딩 문제 방지를 위해 Open Session in View 패턴 비활성화
 
 # 서버 설정
